<package>
  <name>knowrob_cloud</name>
  
  <version>1.0.0</version>
  
  <description>knowrob_cloud</description>
  
  <maintainer email="sasjonge@uni-bremen.de">Sascha Jongebloed</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://www.knowrob.org/</url>
  
  <author>openEASE</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>knowrob</build_depend>
  <build_depend>rosprolog</build_depend>
  
  <run_depend>knowrob</run_depend>
  <run_depend>rosprolog</run_depend>

</package>
